fix: HttpClient.close() is not available before Java21, interrupted the thread using reflection