@@ -202,6 +202,7 @@
                         --add-exports java.management/sun.management=ALL-UNNAMED
                         --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
                         --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
+                        --add-opens java.net.http/jdk.internal.net.http=ALL-UNNAMED
                     </argLine>
                     <skipTests>${skipTests}</skipTests>
                     <!--                    <skipTests>${skipUnit}</skipTests>-->
@@ -248,6 +249,7 @@
                         --add-exports java.management/sun.management=ALL-UNNAMED
                         --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
                         --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
+                        --add-opens java.net.http/jdk.internal.net.http=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
